tooling/nargo_cli/tests/snapshots/execution_success/simple_not/execute__tests__force_brillig_true_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "boolean"
        },
        "visibility": "private"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "boolean"
      },
      "visibility": "public"
    },
    "error_types": {
      "17843811134343075018": {
        "error_kind": "string",
        "string": "Stack too deep"
      }
    }
  },
  "bytecode": "H4sIAAAAAAAA/7VUWw6CMBBcoEYrURP50VuUAMKnH3qQRsI5OLoQt+lYKz+0kzTbx+5kZ9I2oQ8SHjME7Lkwe3eOah3KgFwq8fS5KMJXcOUoOaZwngUULj29hOLvVH2T9Ks5YP+VZM6Y/hjOCPxqyzyP0fK7WgiiyXNrZhzo+wFhzm4aR7LzE9TMeAKXqY/p7XQ3msjelgX99zNnHwpep55c9NH1FnNzsu9UjOG1tJ39VDLm34AWhIBzzL/weg/9myhW9Dm0uhwqPehG93390meHnxyf3vJxnPDpBQAA",
  "debug_symbols": "XY7BCoMwDIbfJece5thlvoqIxBqlENISW2GI775UJsguSf58Sf7sMNFYliHIHFdoux1GDcxhGTh6zCGKdffDwSWHrETWghu3rYRKkqGVwuxgQy7n0JpQzpxRjT4ckEyW7eAcmGp19CbQB/133FADjkw/ORfxN5o/6SLXx0mjp6ko1UuVwaOGxmLXvN3z1R/V7Qs=",
  "file_map": {},
  "names": [
    "main"
  ],
  "brillig_names": [
    "main"
  ]
}
