tooling/nargo_cli/tests/snapshots/execution_success/simple_not/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
[simple_not] Circuit output: 1
